# SDK-EVS-Linux

./: README.md  build-iflyos.sh
jsruntime/: CMakeLists.txt  README.md
jsruntime/cmake/: http-parser.cmake  iotjs.cmake  libtuv.cmake  mbedtls.cmake
jsruntime/cmake/config/: arm-linux.cmake
jsruntime/docs/api/: IoT.js-API-DNS.md
jsruntime/docs/devs/: IoT.js-Developer's-Certificate-of-Origin-1.0.md  IoT.js-Module-Generator.md
jsruntime/iflyosBoards/rpi/: FindCURL.cmake  Findalsa.cmake  Findgstreamer-1.0.cmake  Findgstreamer-app-1.0.cmake  Findlibcrypto.cmake  Findopus.cmake  Findportaudio.cmake  Findsqlite3.cmake  evsCtrl.sh  iFLYOS.json  rpi.profile  toolchain.txt
jsruntime/profiles/: default.profile
jsruntime/src/: iotjs.c  iotjs_binding.h  iotjs_binding_cpp_helper.cpp  iotjs_binding_cpp_helper.h  iotjs_js.h  iotjs_magic_strings.h  iotjs_module_inl.h  iotjs_string_ext.inl.h  iotjs_util.c  modules.json
jsruntime/src/SDS/: BufferLayout.h  Reader.h  SharedDataStream.h  Writer.h
jsruntime/src/iflyos/: CMakeLists.txt  IFLYOSInterface.cpp  IFLYOSInterface.h  IFLYOSInterfaceInternal.h  IFLYOSJHelper.cpp  IFLYOSJHelper.h  IFLYOSJerryScript.cpp  IFLYOSJerryScript.h  IFLYOSThreadPool.cpp  IFLYOSThreadPool.h  iFLYOS_IPC.cpp  iFLYOS_IPC.h
jsruntime/src/js/: ble_hci_socket_gatt.js  buffer.js  console.js  curl.js  events.js  iFLYOS.js  iflyos_i2c.js  iflyos_util.js  pcm_player.js  sqlite.js  util.js  websocket.js  wpa_client.js
jsruntime/src/modules/: cae_intf.h  iotjs_module_console.cpp  iotjs_module_crypto.c  iotjs_module_i2c.c  iotjs_module_i2c.h  iotjs_module_iFLYOS.cpp  iotjs_module_iFLYOS_audio.cpp  iotjs_module_iFLYOS_audio.h  iotjs_module_iFLYOS_curl.cpp  iotjs_module_iFLYOS_i2c.cpp  iotjs_module_iFLYOS_pcmplayer.cpp  iotjs_module_iFLYOS_portaudiowrapper.cpp  iotjs_module_iFLYOS_portaudiowrapper.h  iotjs_module_iFLYOS_sqlite.cpp  iotjs_module_iFLYOS_threadpool.cpp  iotjs_module_iFLYOS_threadpool.h  iotjs_module_iFLYOS_util.cpp  iotjs_module_iFLYOS_wpaclient.cpp  iotjs_module_iFLYOS_wpacontroller.cpp  iotjs_module_iFLYOS_wpacontroller.h  iotjs_module_iflyos_log.h  iotjs_module_periph_common.c  iotjs_module_periph_common.h  iotjs_module_tls.h  iotjs_module_websocket.c
mediaplayer/: CMakeLists.txt  README.md  iFLYOS_IPC.cpp  iFLYOS_IPC.h  main.cpp
mediaplayer/core/: CMakeLists.txt
mediaplayer/core/include/utils/: Vector.h
mediaplayer/core/libcutils/: CMakeLists.txt
mediaplayer/core/libutils/: CMakeLists.txt
mediaplayer/flora/: CMakeLists.txt
mediaplayer/librplayer/: CMakeLists.txt
mediaplayer/librplayer/docs/10_模块简介/12_player/: 10_RPlayer.md  11_WavPlayer.md
mediaplayer/librplayer/include/: MediaPlayer.h  SimplePlayer.h  Utils.h  rk_ffplay.h
mediaplayer/librplayer/sample/: CMakeLists.txt
mediaplayer/librplayer/sample/mediaplayerdemo/: MediaPlayerDemo.cpp
mediaplayer/librplayer/src/: CMakeLists.txt  MediaPlayer.cpp  RKSoundTouch.h  rk_ffplay.c
mediaplayer/librplayer/yodamk/: Makefile
mediaplayer/mutils/: CMakeLists.txt  README.md  config  ndk.mk
mediaplayer/mutils/demo/log/: tcp-rlogcat.cc
mediaplayer/mutils/demo/misc/: thr-pool-demo.cc
mediaplayer/mutils/include/log/: rlog.h
mediaplayer/mutils/include/misc/: circle-queue.h  thr-pool.h
mediaplayer/mutils/src/log/: rlog.cc  sock-svc-writer.h
mediaplayer/rklog/: CMakeLists.txt  common.mk
mediaplayer/rklog/sample/: logSample.cpp  logSampleC.c
mediaplayer/rklog/src/lib/: CMakeLists.txt  RKLog.cpp
mediaplayer/rklog/src/service/: CMakeLists.txt  log2cloud.c
mediaplayer/rklog/src/tools/: CMakeLists.txt
mediaplayer/rklog/yodamk/files/: log2cloud
smartSpeakerApp/: README.md  package.json
smartSpeakerApp/sound_effect/: 音效_关机.raw  音效_唤醒_1.raw  音效_开机.raw  音效_调整音量.raw  音效_闹钟.raw
smartSpeakerApp/src/: adbController.js  audio.js  batchDownloader.js  evsAlertPlayer.js  evsAudioMgr.js  evsAudioPlayer.js  evsAuthorizeMgr.js  evsCapAlarm.js  evsCapAudioPlayer.js  evsCapInterceptor.js  evsCapRecognizer.js  evsCapSpeaker.js  evsCapSystem.js  evsClient.js  evsContextMgr.js  evsMediaPlayer.js  evsModuleConfig.js  evsModuleDoll.js  evsModuleInteraction.js  evsModuleLed.js  evsModuleStartup.js  evsModuleWakeup.js  evsNetworkMgr.js  evsPlayerHandler.js  evsSoundPlayer.js  evsTTSPlayer.js  internetMonitor.js  main.js  testdoll.js
snowboy/: snowboy-detect.h
wpa_ctrl/: CMakeLists.txt  wpa_ctrl.c
(+8 files in other folders)
